<resources>
    <string name="app_name">androidtbc</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="e_mail">E-mail</string>
    <string name="or">or</string>
    <string name="don_t_you_have_an_account">Don’t you have an account?</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="default_web_client_id">259919719765-f3gojs1r67kkkhn4anj762eaockct907.apps.googleusercontent.com</string>
    <string name="by_clicking_the_sign_up_button_you_accept_the_terms_of_the">By clicking the “sign up” button, you accept the terms of the</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="tell_us_more_about_you">Tell us more about you</string>
    <string name="sign_up_successfully">Sign up successfully!</string>
    <string name="your_name">Your name</string>
    <string name="phone_number">Phone number</string>
    <string name="current_city">Current city</string>
    <string name="now_playing">Now Playing</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="popular">Popular</string>
    <string name="search">Search</string>
    <string name="detail">Detail</string>
    <string name="about_movie">About Movie</string>
    <string name="cast">Cast</string>
    <string name="minutes_format">%d Minutes</string>
    <string name="no_saved_movies_yet">No saved movies yet</string>
    <string name="movies_you_save_will_appear_here">Movies you save will appear here</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_your_phone_number">Please enter your phone number</string>
    <string name="please_enter_your_city">Please enter your city</string>
    <string name="profile_information_saved_successfully">Profile information saved successfully</string>
    <string name="continuee">Continue</string>
    <string name="loading_and_three_dot">Loading...</string>
    <string name="clear_watchlist">Clear Watchlist</string>
    <string name="are_you_sure_you_want_to_clear_all_saved_movies">Are you sure you want to clear all saved movies?</string>
    <string name="clear_all">Clear All</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="my_account_feature_coming_soon">My Account feature coming soon</string>
    <string name="help_support_feature_coming_soon"><![CDATA[Help & Support feature coming soon]]></string>
    <string name="about_app_feature_coming_soon">About App feature coming soon</string>

    <string name="error_field_required">This field is required</string>
    <string name="profile_updated_successfully">Profile updated successfully</string>
    <string name="error_updating_profile">Error updating profile</string>
    <string name="no_changes_made">No changes made</string>
    <string name="character_john_doe">Character: John Doe</string>
    <string name="gender_male">Gender: Male</string>
    <string name="popularity_32_5">Popularity: 32.5</string>
    <string name="actor_name">Actor Name</string>
    <string name="update_profile">Update Profile</string>
    <string name="full_name">Full Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="what_do_you_want_to_watch">What do you want to watch?</string>
    <string name="remember_me">Remember me</string>
    <string name="my_account">My Account</string>
    <string name="make_changes_to_your_account">Make changes to your account</string>
    <string name="log_out">Log out</string>
    <string name="further_secure_your_account_for_safety">Further secure your account for safety</string>
    <string name="more">More</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="about_app">About App</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="watch_list">Watch list</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>

    <!-- Add these to your English strings.xml file -->
    <string name="change_language">Change Language</string>
    <string name="language_english">English</string>
    <string name="language_georgian">Georgian</string>
    <string name="language_settings">Language Settings</string>
    <string name="select_language">Select Language</string>
    <string name="language_changed">Language changed successfully</string>
    <string name="remove_from_watchlist">Remove from watchlist</string>
    <string name="are_you_sure_you_want_to_remove_this_movie_from_your_watchlist">Are you sure want to remove this movie from your watchlist?</string>
    <string name="remove">remove</string>
    <string name="city">City</string>
    <string name="loading">Loading...</string>
    <string name="character">Character: %1$s</string>
    <string name="gender">Gender: %1$s</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="not_specified">Not specified</string>
    <string name="popularity">Popularity: %1$s</string>

</resources>