<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_screen"
    tools:context=".presentation.secondregister.SecondRegisterFragment">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSignUpSuccessfully"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="98dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/sign_up_successfully"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTellUsMoreAboutYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tell_us_more_about_you"
        android:textColor="#979797"
        android:fontFamily="@font/poppins"
        app:layout_constraintStart_toStartOf="@id/tvSignUpSuccessfully"
        app:layout_constraintTop_toBottomOf="@id/tvSignUpSuccessfully"
        android:layout_marginTop="9dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etYourName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_et"
            android:fontFamily="@font/poppins"
            android:inputType="text"
            android:hint="@string/your_name"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="26dp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="14dp"
            android:textColorHint="@color/hint_color"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTellUsMoreAboutYou"
            />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_et"
        android:fontFamily="@font/poppins"
        android:inputType="phone"
        android:hint="@string/phone_number"
        android:layout_marginTop="9dp"
        android:layout_marginHorizontal="26dp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="14dp"
        android:textColorHint="@color/hint_color"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etYourName"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_et"
        android:fontFamily="@font/poppins"
        android:inputType="textEmailAddress"
        android:hint="@string/current_city"
        android:layout_marginTop="9dp"
        android:layout_marginHorizontal="26dp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="14dp"
        android:textColorHint="@color/hint_color"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPhoneNumber"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="26dp"
        android:background="@drawable/bg_btn_sign_in"
        android:fontFamily="@font/poppins_semibold"
        android:paddingVertical="13dp"
        android:textSize="18sp"
        android:text="Continue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCity"
        app:layout_constraintVertical_bias="0.94" />


</androidx.constraintlayout.widget.ConstraintLayout>